--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,51 @@
+/* CUSTOM PROPS  */
+:root {
+  --text-color:#111517;
+  --body-bg:#fafafa;
+  --element-bg:#fff;
+}
+
+
+/* FONTS  */
+@font-face {
+  font-family: "Nunito Sans";
+  src: url("../fonts/NunitoSans-ExtraBold.woff2") format("woff2"),
+    url("../fonts/NunitoSans-ExtraBold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Nunito Sans";
+  src: url("../fonts/NunitoSans-Regular.woff2") format("woff2"),
+    url("../fonts/NunitoSans-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Nunito Sans";
+  src: url("../fonts/NunitoSans-Light.woff2") format("woff2"),
+    url("../fonts/NunitoSans-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Nunito Sans";
+  src: url("../fonts/NunitoSans-SemiBold.woff2") format("woff2"),
+    url("../fonts/NunitoSans-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+
+
 /* GLOBAL */
 html {
   height: 100%;
@@ -17,25 +65,36 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  font-size: 16px;
-  line-height: 1.5;
-  font-family:"Arial" sans-serif;
-  background-color: #fff;
-  color: #222;
+  font-size: 14px;
+  line-height: 16PX;
+  font-family:"Nunito-Sans", "Arial", sans-serif;
+  background-color: var(--body-bg);
+  color: var(--text-color);
 }
 
 img {
-  min-width: 100%;
+  max-width: 100%;
   height: auto;
+}
+
+a {
+  text-decoration: none;
+}
+
+/* DARK MODE  */
+.dark-mode {
+  --text-color:#fff;
+  --body-bg: #202c36;
+  --element-bg:#2b3844;
 }
 
 
 /* CONTAINER  */
 .container {
   width: 100%;
-  min-width: 1200px;
-  padding-left: 50px;
-  padding-right: 50px;
+  max-width: 1320px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
 }
