--- a/css/main.css
+++ b/css/main.css
@@ -44,8 +44,6 @@
 }
 
 
-
-
 /* GLOBAL */
 html {
   height: 100%;
@@ -66,7 +64,7 @@ body {
   padding: 0;
   margin: 0;
   font-size: 14px;
-  line-height: 16PX;
+  line-height: 16px;
   font-family:"Nunito-Sans", "Arial", sans-serif;
   background-color: var(--body-bg);
   color: var(--text-color);
@@ -100,8 +98,59 @@ a {
 }
 
 
-
 /* MAIN CONTENT  */
 .main-content {
   flex-grow: 1;
+}
+
+
+/* SITE HEADER  */
+.site-header {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06);
+  background-color:var(--element-bg);
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-logo-link {
+  display: flex;
+  transition: opacity 0.3s ease;
+}
+
+.header-logo-link:hover {
+  opacity: 0.8;
+}
+
+.header-logo-link:active {
+  opacity: 0.6;
+}
+
+.header-logo-img {
+  color:var(--text-color);
+}
+
+.dark-mode-link {
+  padding: 0;
+  border:0;
+  background-color:transparent;
+  color:var(--text-color);
+  cursor: pointer;
+}
+
+.logo-link-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.logo-link-text {
+  margin-left: 8px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
 }
