--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,15 @@ a {
   background-color:transparent;
   color:var(--text-color);
   cursor: pointer;
+  transition: opacity 0.3s ease;
+}
+
+.dark-mode-link:hover {
+  opacity: 0.8;
+}
+
+.dark-mode-link:active {
+  opacity: 0.6;
 }
 
 .logo-link-wrapper {
@@ -165,11 +174,13 @@ a {
   line-height: 22px;
 }
 
+
 /* FILTERS  */
 .filters {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 48px;
 }
 
 .input-search {
@@ -190,4 +201,88 @@ a {
   border:none;
   background-color: var(--element-bg);
   color:var(--text-color);
+}
+
+
+/*  INDEX COUNTRIES */
+.index-countries-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  margin-left: -75px;
+  margin-bottom: -75px;
+}
+
+.index-countries-item {
+  width: calc(25% - 75px);
+  margin-left: 75px;
+  margin-bottom: 75px;
+}
+
+.index-country {
+  width: 264px;
+  height: 336px;
+  background-color: var(--element-bg);
+  box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
+  border-radius: 5px;
+}
+
+.index-country-flag {
+  display: flex;
+  object-fit: cover;
+  border-top-right-radius: 7px;
+  border-top-left-radius: 7px;
+}
+
+.index-country-info {
+  padding: 24px 24px 48px;
+}
+
+.index-country-name {
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 26px;
+  color:var(--text-color);
+}
+
+.index-country-info-link {
+  color:var(--text-color);
+  transition: opacity 0.3s  ease;
+}
+
+.index-country-info-link:hover {
+  opacity: 0.8;
+}
+
+.index-country-info-link:active {
+  opacity: 0.6;
+}
+
+.index-countr-details {
+  margin: 0;
+}
+
+.index-country-details-item {
+  display: flex;
+  align-items: center;
+}
+
+.index-country-details-item:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+.index-country-details-title {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 16px;
+  color:var(--text-color);
+}
+
+.index-country-details-valeu {
+  margin-left: 4px;
+  color:var(--text-color)
 }
